Add modelView for productDetailFragment

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,5 +8,8 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="drank_orange">#ff8000</color>
-    <color name="light_orange">#ffcc99</color>
+    <color name="orange">#FF8000</color>
+    <color name="light_orange">#FFCC99</color>
+    <color name="gray">#C0C0C0</color>
+    <color name="light_gray">#E0E0E0</color>
 </resources>
