--- a/app/src/main/res/layout/fragment_home_category.xml
+++ b/app/src/main/res/layout/fragment_home_category.xml
@@ -17,7 +17,7 @@
         android:layout_marginTop="16dp"
         android:text="Category"
         android:textColor="@color/orange"
-        android:textSize="20dp"
+        android:textSize="20sp"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -25,7 +25,7 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recycler_view"
         android:layout_width="match_parent"
-        android:layout_height="100dp"
+        android:layout_height="140dp"
         android:layout_marginTop="8dp"
         android:orientation="horizontal"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
