load Food firebase

--- a/app/src/main/res/layout/fragment_home_category.xml
+++ b/app/src/main/res/layout/fragment_home_category.xml
@@ -13,9 +13,9 @@
         android:id="@+id/textView"
         android:layout_width="100dp"
         android:layout_height="30dp"
-        android:layout_marginStart="28dp"
+        android:layout_marginStart="20dp"
         android:layout_marginTop="16dp"
-        android:text="Category"
+        android:text="Danh mục"
         android:textColor="@color/orange"
         android:textSize="20sp"
         android:textStyle="bold"
