--- a/app/src/main/res/layout/fragment_home_header.xml
+++ b/app/src/main/res/layout/fragment_home_header.xml
@@ -9,10 +9,10 @@
 
     <TextView
         android:id="@+id/textViewXinChao"
-        android:layout_width="136dp"
+        android:layout_width="200dp"
         android:layout_height="30dp"
-        android:layout_marginStart="50dp"
-        android:layout_marginTop="10dp"
+        android:layout_marginStart="15dp"
+        android:layout_marginTop="5dp"
         android:text="Xin chào: "
         android:textColor="@color/drank_orange"
         android:textSize="25sp"
@@ -21,9 +21,9 @@
 
     <TextView
         android:id="@+id/textViewOrder"
-        android:layout_width="211dp"
+        android:layout_width="200dp"
         android:layout_height="30dp"
-        android:layout_marginStart="48dp"
+        android:layout_marginStart="15dp"
         android:text="Đặt món ngay!"
         android:textColor="@color/drank_orange"
         android:textSize="20sp"
@@ -34,13 +34,24 @@
         android:id="@+id/floatingActionButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="55dp"
-        android:layout_marginTop="10dp"
+        android:layout_marginStart="100dp"
+        android:layout_marginTop="8dp"
         android:clickable="true"
         android:contentDescription="@string/app_name"
         app:layout_constraintStart_toEndOf="@+id/textViewOrder"
         app:layout_constraintTop_toTopOf="parent"
         tools:src="@tools:sample/avatars" />
+
+    <ImageView
+        android:id="@+id/imageViewBanner"
+        android:layout_width="368dp"
+        android:layout_height="132dp"
+        android:layout_marginStart="12dp"
+        android:layout_marginTop="4dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textViewOrder"
+        tools:src=""
+        android:background="@color/light_orange"/>
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
