--- a/app/src/main/res/layout/fragment_home_product.xml
+++ b/app/src/main/res/layout/fragment_home_product.xml
@@ -11,13 +11,25 @@
         android:id="@+id/textViewProduct"
         android:layout_width="100dp"
         android:layout_height="30dp"
-        android:layout_marginStart="28dp"
-        android:layout_marginTop="16dp"
-        android:text="Popular"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="0dp"
+        android:text="Bán chạy"
         android:textColor="@color/orange"
         android:textSize="20sp"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recycler_view_product"
+        android:layout_width="match_parent"
+        android:layout_height="200dp"
+        android:layout_marginTop="25dp"
+        android:orientation="horizontal"
+        android:padding="5dp"
+        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView"
+        tools:listitem="" />
 
 </FrameLayout>
