--- a/app/src/main/res/layout/home_item_category.xml
+++ b/app/src/main/res/layout/home_item_category.xml
@@ -14,13 +14,13 @@
         android:padding="16dp">
 
         <ImageView
-            android:id="@+id/category_image"
+            android:id="@+id/productImage"
             android:layout_width="80dp"
             android:layout_height="80dp"
             android:scaleType="centerCrop" />
 
         <TextView
-            android:id="@+id/category_name"
+            android:id="@+id/textviewPrice"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
