--- a/app/src/main/res/layout/home_item_product.xml
+++ b/app/src/main/res/layout/home_item_product.xml
@@ -15,13 +15,15 @@
 
         <TextView
             android:id="@+id/textViewNameProduct"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textColor="@android:color/black"
+            android:textSize="16sp" />
 
         <ImageView
             android:id="@+id/productImage"
-            android:layout_width="73dp"
-            android:layout_height="73dp"
+            android:layout_width="80dp"
+            android:layout_height="70dp"
             android:scaleType="centerCrop" />
 
         <TextView
