--- a/app/src/main/res/layout/home_item_category.xml
+++ b/app/src/main/res/layout/home_item_category.xml
@@ -4,6 +4,7 @@
     android:layout_height="wrap_content"
     app:cardCornerRadius="8dp"
     app:cardElevation="4dp"
+    android:layout_marginLeft="3px"
     xmlns:android="http://schemas.android.com/apk/res/android">
 
     <LinearLayout
@@ -11,7 +12,7 @@
         android:layout_height="wrap_content"
         android:gravity="center"
         android:orientation="vertical"
-        android:padding="16dp">
+        android:padding="14dp">
 
         <ImageView
             android:id="@+id/productImage"
