--- a/app/src/main/res/layout/home_item_product.xml
+++ b/app/src/main/res/layout/home_item_product.xml
@@ -1,10 +1,12 @@
-<androidx.cardview.widget.CardView
+<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="wrap_content"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="120dp"
     android:layout_height="wrap_content"
     app:cardCornerRadius="8dp"
     app:cardElevation="4dp"
-    xmlns:android="http://schemas.android.com/apk/res/android">
+    android:layout_marginRight="2dp"
+    android:layout_marginLeft="2dp">
 
     <LinearLayout
         android:layout_width="match_parent"
