--- a/app/src/main/res/layout/fragment_home_product.xml
+++ b/app/src/main/res/layout/fragment_home_product.xml
@@ -13,7 +13,7 @@
         android:layout_height="30dp"
         android:layout_marginStart="20dp"
         android:layout_marginTop="0dp"
-        android:text="Bán chạy"
+        android:text="Yêu thích"
         android:textColor="@color/orange"
         android:textSize="20sp"
         android:textStyle="bold"
