--- a/app/src/main/res/layout/home_product_item.xml
+++ b/app/src/main/res/layout/home_product_item.xml
@@ -1,6 +1,5 @@
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="120dp"
     android:layout_height="wrap_content"
     app:cardCornerRadius="8dp"
@@ -36,12 +35,12 @@
             android:textColor="@android:color/black"
             android:textSize="16sp" />
 
-        <com.google.android.material.floatingactionbutton.FloatingActionButton
-            android:id="@+id/addButton"
-            android:layout_width="28dp"
-            android:layout_height="29dp"
-            android:clickable="true"
-            android:contentDescription="@string/app_name"
+        <ImageButton
+            android:id="@+id/imageButton"
+            android:layout_width="wrap_content"
+            android:layout_height="35dp"
+            android:padding="-3dp"
+            android:scaleType="centerCrop"
             app:srcCompat="@drawable/add_product" />
 
     </LinearLayout>
