--- a/app/src/main/res/layout/fragment_delivery.xml
+++ b/app/src/main/res/layout/fragment_delivery.xml
@@ -3,7 +3,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".mvvm.viewmodels.orders.Delivery">
+    xmlns:mapbox="http://schemas.android.com/apk/res-auto"
+    tools:context=".mvvm.view.orders.Delivery">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -19,12 +20,13 @@
                 android:text="Trạng thái đơn hàng: "
                 android:backgroundTint="@color/light_orange"
                 android:textSize="20dp"/>
-
-            <com.google.android.gms.maps.MapView
-                android:id="@+id/mapView"
+            <com.mapbox.maps.MapView
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
-
+                android:layout_height="wrap_content"
+                android:id="@+id/map"
+                mapbox:mapbox_cameraTargetLat="40.7128"
+                mapbox:mapbox_cameraTargetLng="-74.0060"
+                mapbox:mapbox_cameraZoom="9.0"/>
         </LinearLayout>
         <LinearLayout
             android:layout_width="match_parent"
@@ -37,13 +39,26 @@
                 android:text="Thông tin địa chỉ đơn hàng "
                 android:backgroundTint="@color/light_orange"
                 android:textSize="20dp"/>
-            <TextView
-                android:id="@+id/txtAddress"
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Địa chỉ:  "
-                android:backgroundTint="@color/light_orange"
-                android:textSize="20dp"/>
+                android:orientation="horizontal">
+
+                <TextView
+
+                    android:layout_width="180dp"
+                    android:layout_height="wrap_content"
+                    android:backgroundTint="@color/light_orange"
+                    android:text="Địa chỉ:  "
+                    android:textSize="20dp" />
+                <TextView
+                    android:id="@+id/txtAddress"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:backgroundTint="@color/light_orange"
+                    android:textSize="20dp" />
+
+            </LinearLayout>
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -51,28 +66,81 @@
                 android:orientation="horizontal">
 
                 <TextView
-                    android:id="@+id/txtnameFood"
+
                     android:layout_width="180dp"
                     android:layout_height="wrap_content"
                     android:backgroundTint="@color/light_orange"
                     android:text="Tên món "
                     android:textSize="20dp" />
                 <TextView
+                    android:id="@+id/txtnameFood"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:backgroundTint="@color/light_orange"
+                    android:textSize="20dp" />
+
+            </LinearLayout>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+
+                <TextView
+
+                    android:layout_width="180dp"
+                    android:layout_height="wrap_content"
+                    android:backgroundTint="@color/light_orange"
+                    android:text="Giá tiền: "
+                    android:textSize="20dp" />
+                <TextView
+                    android:id="@+id/txtPrice"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:backgroundTint="@color/light_orange"
+                    android:textSize="20dp" />
+
+            </LinearLayout>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+
+                <TextView
+
+                    android:layout_width="180dp"
+                    android:layout_height="wrap_content"
+                    android:backgroundTint="@color/light_orange"
+                    android:text="Số lượng:  "
+                    android:textSize="20dp" />
+                <TextView
                     android:id="@+id/txtAmount"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:backgroundTint="@color/light_orange"
-                    android:text="Số lượng :  "
                     android:textSize="20dp" />
 
             </LinearLayout>
-            <TextView
-                android:id="@+id/txtTotal"
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:backgroundTint="@color/light_orange"
-                android:text="Tổng tiền :  "
-                android:textSize="20dp" />
+                android:orientation="horizontal">
+
+                <TextView
+
+                    android:layout_width="180dp"
+                    android:layout_height="wrap_content"
+                    android:backgroundTint="@color/light_orange"
+                    android:text="Tổng tiền:  "
+                    android:textSize="20dp" />
+                <TextView
+                    android:id="@+id/txtTotal"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:backgroundTint="@color/light_orange"
+                    android:textSize="20dp" />
+
+            </LinearLayout>
+
         </LinearLayout>
 
 
@@ -80,7 +148,7 @@
             android:id="@+id/btnReceived"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Đã nhận được hàng"
+            android:text="Đã Nhận Hàng"
             android:textStyle="italic"
             android:textSize="20dp"
             android:backgroundTint="@color/drank_orange"/>
