--- a/app/src/main/res/layout/fragment_product_detail.xml
+++ b/app/src/main/res/layout/fragment_product_detail.xml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:id="@+id/product"
-    tools:context=".mvvm.viewmodels.productD.productDetailFragment">
+    tools:context=".mvvm.view.product_deail.ProductDetailFragment">
     <!-- TODO: Update blank fragment layout -->
     <Button
         android:id="@+id/btn_back"
@@ -18,11 +19,10 @@
         android:layout_height="wrap_content"
         android:orientation="vertical">
         <ImageView
-            android:id="@+id/image"
+            android:id="@+id/imageFood"
             android:layout_width="match_parent"
-            android:layout_height="250dp"
-            android:scaleType="fitXY"
-            android:src="@drawable/anh2"/>
+            android:layout_height="200dp"
+            android:scaleType="fitXY" />
 
         <TextView
             android:id="@+id/text_name"
@@ -67,12 +67,14 @@
                 android:textSize="20dp"
                 android:layout_marginLeft="5dp"
                 android:text="đã bán |"/>
+
             <TextView
+                android:id="@+id/text_ratePoint"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textSize="20dp"
                 android:layout_marginLeft="10dp"
-                android:text="@string/notable"/>
+                android:text="@string/notable"
+                android:textSize="20dp" />
             <ImageView
                 android:layout_width="20dp"
                 android:layout_height="20dp"
@@ -109,7 +111,7 @@
                 android:layout_width="25dp"
                 android:layout_height="25dp"
                 android:layout_gravity="center"
-                android:layout_marginLeft="80dp"
+                android:layout_marginLeft="120dp"
                 android:background="@drawable/add" />
         </LinearLayout>
         <TextView
@@ -120,10 +122,17 @@
             android:layout_marginLeft="20dp"
             android:text="Bình luận"
             android:textStyle="bold"/>
-        <ListView
-            android:layout_width="wrap_content"
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/recycler_view_comments"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="5dp"
-            android:layout_marginLeft="20dp"/>
+            android:layout_marginTop="10dp"
+            android:layout_marginLeft="20dp"
+            android:orientation="vertical"
+            tools:listitem=""
+            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/textView"/>
+
     </LinearLayout>
 </RelativeLayout>
