--- a/app/src/main/res/layout/product_detail_list_comments.xml
+++ b/app/src/main/res/layout/product_detail_list_comments.xml
@@ -3,17 +3,17 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical">
 
     <TextView
         android:id="@+id/text_nameUser"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginLeft="12dp"
-        android:text="Phạm Văn Hùng"
+        android:textStyle="bold"
         android:textSize="15dp" />
 
     <ImageView
@@ -21,13 +21,13 @@
         android:layout_width="123dp"
         android:layout_height="22dp"
         android:layout_marginTop="5dp" />
+
     <TextView
         android:id="@+id/text_comments"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginLeft="12dp"
         android:layout_marginTop="5dp"
-        android:textSize="15dp"
-        android:text="Ăn nói chung cũng được ,tạm ổn !"/>
+        android:textSize="15dp" />
 </LinearLayout>
 </androidx.cardview.widget.CardView>
