--- a/app/src/main/res/layout/home_product_item.xml
+++ b/app/src/main/res/layout/home_product_item.xml
@@ -37,10 +37,10 @@
 
         <ImageButton
             android:id="@+id/imageButton"
-            android:layout_width="wrap_content"
-            android:layout_height="35dp"
-            android:padding="-3dp"
-            android:scaleType="centerCrop"
+            android:layout_width="35dp"
+            android:layout_height="42dp"
+            android:scaleX="0.8"
+            android:scaleY="0.7"
             app:srcCompat="@drawable/add_product" />
 
     </LinearLayout>
