--- a/app/src/main/res/layout/activity_enter_otp.xml
+++ b/app/src/main/res/layout/activity_enter_otp.xml
@@ -4,35 +4,65 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/backgr"
     tools:context=".mvvm.viewmodels.login.EnterOtpActivity">
 
     <EditText
         android:id="@+id/edt_otp"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="300dp"
+        android:layout_height="60dp"
+        android:layout_marginStart="52dp"
+        android:layout_marginTop="124dp"
+        android:background="@drawable/edittext"
         android:ems="10"
-        android:hint="Code OTP"
+        android:hint="Enter your OTP sent to"
         android:inputType="textPersonName"
+        android:padding="8dp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/textView9" />
 
     <Button
         android:id="@+id/btn_send_otp_code"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="40dp"
-        android:text="Verification"
+        android:layout_width="165dp"
+        android:layout_height="61dp"
+        android:layout_marginStart="120dp"
+        android:layout_marginTop="100dp"
+        android:background="@drawable/btn"
+        android:text="Verify"
+        android:textSize="30sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/edt_otp" />
 
     <TextView
-        android:id="@+id/tv_send_otp_again"
+        android:id="@+id/textView9"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="40dp"
-        android:layout_marginTop="52dp"
-        android:text="Send Otp again"
-        app:layout_constraintStart_toEndOf="@+id/btn_send_otp_code"
-        app:layout_constraintTop_toBottomOf="@+id/edt_otp" />
+        android:layout_marginStart="52dp"
+        android:layout_marginTop="80dp"
+        android:text="Verification"
+        android:textSize="60sp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/textView10"
+        android:layout_width="194dp"
+        android:layout_height="27dp"
+        android:layout_marginStart="52dp"
+        android:layout_marginTop="60dp"
+        android:text="Didn't receive the OTP ?"
+        android:textSize="18sp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/btn_send_otp_code" />
+
+    <TextView
+        android:id="@+id/tv_send_otp_again"
+        android:layout_width="100dp"
+        android:layout_height="23dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="60dp"
+        android:text="RESEND OTP"
+        android:textSize="20sp"
+        app:layout_constraintStart_toEndOf="@+id/textView10"
+        app:layout_constraintTop_toBottomOf="@+id/btn_send_otp_code" />
 </androidx.constraintlayout.widget.ConstraintLayout>
