--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -26,9 +26,9 @@
         android:layout_marginTop="16dp"
         android:background="@drawable/edittext"
         android:ems="10"
-        android:padding="8dp"
         android:hint="Phonenumber"
         android:inputType="textPersonName"
+        android:padding="8dp"
         android:textSize="28sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView7" />
@@ -37,8 +37,8 @@
         android:id="@+id/btn_verify_phone_number"
         android:layout_width="161dp"
         android:layout_height="74dp"
-        android:layout_marginStart="44dp"
-        android:layout_marginTop="48dp"
+        android:layout_marginStart="36dp"
+        android:layout_marginTop="88dp"
         android:background="@drawable/btn"
         android:text="Login"
         android:textSize="30sp"
@@ -88,4 +88,17 @@
         android:textSize="18sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/btn_verify_phone_number" />
+
+    <TextView
+        android:id="@+id/ext_error"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="44dp"
+        android:layout_marginTop="8dp"
+        android:text="This phone number is not registered"
+        android:textColor="#FD0707"
+        android:textSize="20sp"
+        android:visibility="gone"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/edt_phone_number" />
 </androidx.constraintlayout.widget.ConstraintLayout>
