--- a/app/src/main/res/layout/fragment_delivery.xml
+++ b/app/src/main/res/layout/fragment_delivery.xml
@@ -4,7 +4,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:mapbox="http://schemas.android.com/apk/res-auto"
-    tools:context=".mvvm.view.orders.Delivery">
+    tools:context=".mvvm.view.orders.Delivery"
+    android:id="@+id/fragment_delivery">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -20,13 +21,13 @@
                 android:text="Trạng thái đơn hàng: "
                 android:backgroundTint="@color/light_orange"
                 android:textSize="20dp"/>
-            <com.mapbox.maps.MapView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:id="@+id/map"
-                mapbox:mapbox_cameraTargetLat="40.7128"
-                mapbox:mapbox_cameraTargetLng="-74.0060"
-                mapbox:mapbox_cameraZoom="9.0"/>
+
+<!--            <com.mapbox.maps.MapView-->
+<!--                android:id="@+id/map"-->
+<!--                android:layout_width="match_parent"-->
+<!--                android:layout_height="wrap_content" />-->
+
+
         </LinearLayout>
         <LinearLayout
             android:layout_width="match_parent"
