--- a/app/src/main/res/layout/fragment_delivery.xml
+++ b/app/src/main/res/layout/fragment_delivery.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:mapbox="http://schemas.android.com/apk/res-auto"
-    tools:context=".mvvm.view.orders.Delivery"
+    tools:context=".mvvm.view.orders.DeliveryFragment"
     android:id="@+id/fragment_delivery">
 
     <LinearLayout
