--- a/app/src/main/res/layout/fragment_product_detail.xml
+++ b/app/src/main/res/layout/fragment_product_detail.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:id="@+id/product"
-    tools:context=".mvvm.view.product_deail.ProductDetailFragment">
+    tools:context=".mvvm.view.productdetail.ProductDetailFragment">
     <!-- TODO: Update blank fragment layout -->
     <Button
         android:id="@+id/btn_back"
