--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -10,8 +10,8 @@
     <FrameLayout
         android:id="@+id/layoutTop"
         android:layout_width="410dp"
-        android:layout_height="230dp"
-        android:layout_marginTop="10dp"
+        android:layout_height="260dp"
+        android:layout_marginTop="5dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
@@ -20,18 +20,16 @@
     <FrameLayout
         android:id="@+id/layoutCenter"
         android:layout_width="410dp"
-        android:layout_height="205dp"
-        android:layout_marginTop="5dp"
+        android:layout_height="210dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/layoutTop">
 
     </FrameLayout>
 
     <FrameLayout
-        android:id="@+id/layoutBotom"
+        android:id="@+id/layoutBottom"
         android:layout_width="410dp"
-        android:layout_height="270dp"
-        android:layout_marginTop="5dp"
+        android:layout_height="300dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/layoutCenter">
 
