--- a/app/src/main/res/layout/fragment_list_search.xml
+++ b/app/src/main/res/layout/fragment_list_search.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".mvvm.viewmodels.find.ListSearchFragment"
+    tools:context=".mvvm.view.search.ListSearchFragment"
     android:id="@+id/list">
 
     <!-- TODO: Update blank fragment layout -->
